# fortunelike

./: Cargo.toml  README.md  example_db.yaml  test.yaml  words_db.yaml
src/: main.rs
